set a maxWidth to avoid stretching on larger screens

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,11 @@ html {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.App-container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
 label,
 button {
   cursor: pointer;
@@ -17,17 +22,18 @@ button {
 
 .form {
   width: 25vw;
+  max-width: 300px;
 }
 
 .select-custom {
   width: 100%;
 }
 
-.form__button {
-  width: 100px;
-}
-
 .select,
 .width-100 {
   width: 100%;
+}
+
+.centered {
+  margin: 0 auto;
 }
